--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <body>
 
   <!-- Start your project here-->
-  <nav class="navbar navbar-expand-lg bigNav">
+  <nav class="navbar bigNav">
     <a href="#"><b class="dashword"><i class="fas fa-cog"></i>Dashboard</b></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+    <button class="na*vbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
       aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
