--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
   
   <!-- MDB -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.2.0/mdb.min.js"></script>
-  <script type="text/javascript" src="./js/sript.js"></script>
+  <script type="text/javascript" src="./js/app.js"></script>
 </body>
 
 </html>
