styles and index update

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <nav class="navbar bigNav">
     <a href="#">      
       <b class="bigNavText">
-        <ion-icon class="bigNavIcon" name="cog-outline"></ion-icon>
+        <ion-icon class="bigNavIcon" name="settings"></ion-icon>
         Dashboard</b>
     </a>
    <!-- Button trigger modal -->
@@ -64,24 +64,64 @@
     </div>
   </div>
 
-  <div class="container twoBars">
+  <div class="container">
     <div class="row">
-      <div class="col-md-3">
+      <div class="col-lg-3 col-md-6 col-sm-12 smallBar">
         <div class="list-group">
-          <button type="button" class="list-group-item list-group-item-action wineColor"><i
-              class="fas fa-cog"></i>Dashboard</button>
-          <button type="button" class="list-group-item list-group-item-action" data-toggle="modal"
-            data-target="#modalAdd">
-            <i class="fas fa-plus"></i>
-            Add Start-up</button>
-          <button type="button" class="list-group-item list-group-item-action">Start-up details</button>
+          <button type="button" class="list-group-item list-group-item-action wineColor">
+            <ion-icon class="miniIcon" name="settings"></ion-icon>
+            Dashboard
+          </button>
+          <!-- Button trigger modal -->
+          <button type="button" class="list-group-item list-group-item-action" data-mdb-toggle="modal" data-mdb-target="#exampleModal">
+            <ion-icon class="miniIconOthers" name="add-circle"></ion-icon>
+            Add new Start-up
+          </button>
+
+          <!-- Modal -->
+          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                  <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">...</div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-mdb-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <button type="button" class="list-group-item list-group-item-action">
+            <ion-icon class="miniIconOthers" name="reader"></ion-icon>
+            Start-up details
+          </button>
+          <button type="button" class="list-group-item list-group-item-action">
+            <ion-icon class="miniIconOthers" name="business"></ion-icon>
+            Companies
+          </button>
+          <button type="button" class="list-group-item list-group-item-action">
+            <ion-icon class="miniIconOthers" name="timer"></ion-icon>
+            History
+          </button>
+          <button type="button" class="list-group-item list-group-item-action">
+            <ion-icon class="miniIconOthers" name="information-circle"></ion-icon>
+            Enquiries
+          </button>
+        
         </div>
 
 
       </div>
-      <div class="col-md-9">
+      <div class="col-lg-9 col-md-12 col-sm-12 bigBar">
         <ul class="list-group">
-          <li class="list-group-item wineColor">All Startups</li>
+          <li class="list-group-item wineColor">
+            <ion-icon class="miniIcon1" name="business"></ion-icon>
+            All Startups
+          </li>
           <li class="list-group-item">
             <form class="form-inline d-flex justify-content-center form-sm mt-0">
               <i class="fas fa-search" aria-hidden="true"></i>
@@ -93,142 +133,11 @@
             <div class="wrapper-editor">
               <div class="block my-4">
                 <div class="d-flex justify-content-center">
+                  Editor here
                 </div>
               </div>
 
-              <div class="row d-flex justify-content-center modalWrapper">
-                <div class="modal fade addNewInputs" id="modalAdd" tabindex="-1" role="dialog"
-                  aria-labelledby="modalAdd" aria-hidden="true">
-                  <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                      <div class="modal-header text-center">
-                        <h4 class="modal-title w-100 font-weight-bold text-primary ml-5">Start-up Details</h4>
-                        <button type="button" class="close text-primary" data-dismiss="modal" aria-label="Close">
-                          <span aria-hidden="true">&times;</span>
-                        </button>
-                      </div>
-
-
-
-
-                      <div class="modal-body mx-3">
-                        <form onsubmit="event.preventDefault();onFormSubmit()" autocomplete="off">
-                          <div class="md-form mb-5">
-                            <input type="text" id="inputCompany" class="form-control validate" name="company">
-                            <label data-error="wrong" data-success="right" for="inputName">Company</label>
-                          </div>
-
-                          <div class="md-form mb-5">
-                            <input type="text" id="inputMarket" class="form-control validate" name="market">
-                            <label data-error="wrong" data-success="right" for="inputPosition">Market/Industry</label>
-                          </div>
-
-                          <div class="md-form mb-5">
-                            <input type="text" id="inputLocation" class="form-control validate" name="locatiom">
-                            <label data-error="wrong" data-success="right" for="inputOfficeInput">Location</label>
-                          </div>
-
-                          <div class="md-form mb-5">
-                            <input type="text" id="inputJoined" class="form-control validate" name="joined">
-                            <label data-error="wrong" data-success="right" for="inputAge">Joined</label>
-                          </div>
-
-                          <div class="md-form mb-5">
-                            <input type="date" id="inputDate" class="form-control" placeholder="Select Date"
-                              name="date">
-                            <label data-error="wrong" data-success="right" for="inputDate"></label>
-                          </div>
-
-                      </div>
-                      <div class="modal-footer d-flex justify-content-center buttonAddFormWrapper">
-                        <button class="btn btn-outline-primary btn-block buttonAdd" data-dismiss="modal" type="submit"
-                          value="submit">Add Start-up </button>
-                        </form>
-                      </div>
-
-                    </div>
-                  </div>
-                </div>
-
-
-                <div class="modal fade modalEditClass" id="modalEdit" tabindex="-1" role="dialog" aria-hidden="true">
-                  <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                      <div class="modal-header text-center">
-                        <h4 class="modal-title w-100 font-weight-bold text-secondary ml-5">Edit Company</h4>
-                        <button type="button" class="close text-secondary" data-dismiss="modal" aria-label="Close">
-                          <span aria-hidden="true">&times;</span>
-                        </button>
-                      </div>
-
-
-
-
-                      <div class="modal-body mx-3">
-                        <form onsubmit="event.preventDefault();onFormSubmit()" autocomplete="off">
-                          <div class="md-form mb-5">
-                            <input type="text" id="editCompany" class="form-control validate" name="company">
-                            <label data-error="wrong" data-success="right" for="formNameEdit">Company</label>
-                          </div>
-
-                          <div class="md-form mb-5">
-                            <input type="text" id="editMarket" class="form-control validate" name="market/industry">
-                            <label data-error="wrong" data-success="right"
-                              for="formPositionEdit">Market/Industry</label>
-                          </div>
-
-                          <div class="md-form mb-5">
-                            <input type="text" id="editLocation" class="form-control validate" name="locatiom">
-                            <label data-error="wrong" data-success="right" for="formOfficeEdit">Location</label>
-                          </div>
-
-                          <div class="md-form mb-5">
-                            <input type="text" id="editJoined" class="form-control validate" name="joined">
-                            <label data-error="wrong" data-success="right" for="formAgeEdit">Joined</label>
-                          </div>
-
-                          <div class="md-form mb-5">
-                            <input type="text" id="editDate" class="form-control datepicker" name="date">
-                            <label data-error="wrong" data-success="right" for="formDateEdit">Date</label>
-                          </div>
-
-
-                      </div>
-                      <div class="modal-footer d-flex justify-content-center editInsideWrapper">
-                        <button class="btn btn-outline-secondary btn-block editInside" data-dismiss="modal"
-                          type="submit" value="submit">Edit Company
-                        </button>
-                        </form>
-                      </div>
-
-                    </div>
-                  </div>
-                </div>
-
-
-                <div class="modal fade" id="modalDelete" tabindex="-1" role="dialog" aria-labelledby="modalDelete">
-                  <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                      <div class="modal-header text-center">
-                        <h4 class="modal-title w-100 font-weight-bold ml-5 text-danger">Delete</h4>
-                        <button type="button" class="close text-danger" data-dismiss="modal" aria-label="Close">
-                          <span aria-hidden="true">&times;</span>
-                        </button>
-                      </div>
-                      <div class="modal-body mx-3">
-                        <p class="text-center h4">Are you sure to delete selected row?</p>
-
-                      </div>
-                      <div class="modal-footer d-flex justify-content-center deleteButtonsWrapper">
-                        <button type="button" class="btn btn-danger btnYesClass" id="btnYes"
-                          data-dismiss="modal">Yes</button>
-                        <button type="button" class="btn btn-primary btnNoClass" id="btnNo"
-                          data-dismiss="modal">No</button>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-
+              
 
 
                 <table id="companies" class="table table-striped table-bordered" cellspacing="0" width="100%">
