mobile view construction

--- a/index.html
+++ b/index.html
@@ -67,15 +67,15 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-3 col-md-6 col-sm-12 smallBar">
-        <div class="list-group">
+        <div class="list-group listGroup">
           <button type="button" class="list-group-item list-group-item-action wineColor">
             <ion-icon class="miniIcon" name="settings"></ion-icon>
-            Dashboard
+            <span>Dashboard</span>
           </button>
           <!-- Button trigger modal -->
           <button type="button" class="list-group-item list-group-item-action" data-mdb-toggle="modal" data-mdb-target="#exampleModal">
             <ion-icon class="miniIconOthers" name="add-circle"></ion-icon>
-            Add new Start-up
+            <span>Add new Start-up</span>
           </button>
 
           <!-- Modal -->
@@ -96,19 +96,19 @@
           </div>
           <button type="button" class="list-group-item list-group-item-action">
             <ion-icon class="miniIconOthers" name="reader"></ion-icon>
-            Start-up details
+            <span>Start-up details</span>
           </button>
           <button type="button" class="list-group-item list-group-item-action">
             <ion-icon class="miniIconOthers" name="business"></ion-icon>
-            Companies
+            <span>Companies</span>
           </button>
           <button type="button" class="list-group-item list-group-item-action">
             <ion-icon class="miniIconOthers" name="timer"></ion-icon>
-            History
+            <span>History</span>
           </button>
           <button type="button" class="list-group-item list-group-item-action">
             <ion-icon class="miniIconOthers" name="information-circle"></ion-icon>
-            Enquiries
+            <span>Enquiries</span>
           </button>
           
           </div>
